Opened 14 years ago

Closed 14 years ago

#7367 closed bug (fixed)

sshd fails to load, due to missing directory /var/empty

Reported by: mmadia Owned by: stippi
Priority: normal Milestone: R1/alpha3
Component: Applications/Installer Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by mmadia)

hrev40924.

By default, /boot/common/settings/network/services launches /boot/common/bin/sshd -D . However, on a cleanly installed partition, /var/empty does not exist, thus sshd fails to start :

~/Desktop> /boot/common/bin/sshd -D
Missing privilege separation directory: /var/empty

browser:haiku/trunk/build/jam/OptionalPackages:1225 , specifies the /var/empty directory.

		AddUserToHaikuImage sshd : 1001 : 100 : /var/empty : /bin/true
			: "sshd user" ;

It appears that common/var/empty is indeed added to the image file, as specifed by HaikuImage, but Installer ignores var and thus /var/empty goes missing on the installed partition.

The mechanism for copying/ignoring var in CopyEngine::_ShouldCopyEntry() may need revising, to specifically ignore var/swap and other possible entries.

Change History (5)

comment:1 by mmadia, 14 years ago

Component: - GeneralApplications/Installer
Description: modified (diff)
Milestone: R1R1/alpha3
Owner: changed from nobody to stippi
Status: newassigned

comment:2 by mmadia, 14 years ago

Description: modified (diff)

comment:3 by scottmc, 14 years ago

I suspect that openssh is what is creating the /boot/common/var/empty directory as well.

comment:4 by stippi, 14 years ago

Status: assignedin-progress

comment:5 by stippi, 14 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev41026. I tested with the OpenSSH package installed (/var/empty) was present on the source installation, and it was present in the target installation after installing. The swap file is now ignored specifically and all the rest of /var is copied.

Note: See TracTickets for help on using tickets.