Don't ignore the entire var directory, but rather only the swap file specifically. There is already a TODO in the code for replacing this mechanism with something cleaner and more flexible. Resolves ticket #7367.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41026 a95241bf-73f2-0310-859d-f6bbb57e9c96