src/apps/installer/CopyEngine.h
@@ -110,7 +110,7 @@ private:
 
 	// TODO: Should be made into a list of BEntris to be ignored, perhaps.
 	// settable by method...
-			BEntry				fVarDirectory;
+			BEntry				fSwapFileEntry;
 };
 
 
